--- a/Energy_consumption.ipynb
+++ b/Energy_consumption.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0705fa86-01d7-4382-9bb1-6741ca43743c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 2,
    "id": "c14d6961",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 3,
    "id": "1f8ef846",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e5930396-4978-450f-a701-3dc543a61972",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8996442f-d090-4d25-bf01-daa85f91613a",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "4 2002-12-31 05:00:00  24860.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "b1213ef0-e239-4597-9067-c44af7331a3c",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "145365 2018-01-02 00:00:00  38608.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "e9aa7e51-3c78-4eed-b06e-2696852a8708",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "std                              NaN    6464.012166"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "bdc31b5f-f61a-4e21-a2df-4d3545767481",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "67567d31-3f92-4ecb-80ff-30767e574955",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "              dtype='datetime64[ns]', freq=None)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e1b9124b",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "aeaacbad",
    "metadata": {},
    "outputs": [],
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "a91ff92d",
    "metadata": {},
    "outputs": [
@@ -703,7 +703,7 @@
        "2002-12-31 05:00:00        1           0       4  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d6627213",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1046,7 @@
        "2002-01-01 05:00:00        1           0       4  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "3282b07c",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 15,
    "id": "0468e718-5352-4f75-befc-421c36038722",
    "metadata": {},
    "outputs": [],
@@ -1733,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "d1c39909",
    "metadata": {},
    "outputs": [],
@@ -2090,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "219c64c0",
    "metadata": {},
    "outputs": [],
@@ -2100,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "id": "58233ccf",
    "metadata": {},
    "outputs": [],
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "id": "6e4c6f9f",
    "metadata": {},
    "outputs": [],
@@ -2128,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "id": "4a93bf7f",
    "metadata": {},
    "outputs": [
@@ -2370,7 +2370,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2381,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "b86cce1c",
    "metadata": {},
    "outputs": [
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "id": "c9bd7509",
    "metadata": {},
    "outputs": [],
@@ -2452,7 +2452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "id": "45a77398",
    "metadata": {},
    "outputs": [
@@ -2495,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "id": "17d76483",
    "metadata": {},
    "outputs": [
@@ -2517,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "id": "c69e1282",
    "metadata": {},
    "outputs": [],
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "id": "8728bec6",
    "metadata": {},
    "outputs": [],
@@ -2543,7 +2543,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
+   "id": "42fd4ea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# xgb_model.save_model(\"xgb_model.json\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0c60291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# xgb_model = xgb.XGBRegressor()\n",
+    "# xgb_model.load_model(\"xgb_model.json\")\n",
+    "\n",
+    "# # Predict như bình thường\n",
+    "# xgb_predictions = xgb_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a09b45f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "f874a108",
    "metadata": {},
    "outputs": [
@@ -2593,6 +2627,82 @@
     "plt.xlabel('Thời gian', fontsize=14)\n",
     "plt.legend()\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "daade90d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAPE: 0.14%\n",
+      "Accuracy: 99.86%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "mask = y_test != 0\n",
+    "mape = np.mean(np.abs((y_test[mask] - xgb_predictions[mask]) / y_test[mask])) * 100\n",
+    "\n",
+    "# Accuracy (dạng phần trăm)\n",
+    "accuracy = 100 - mape\n",
+    "\n",
+    "print(f\"MAPE: {mape:.2f}%\")\n",
+    "print(f\"Accuracy: {accuracy:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "842b63b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validated R² scores: [0.99896008 0.99931099 0.99963962 0.99961626 0.99983899]\n",
+      "Mean R²: 0.9995\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "import numpy as np\n",
+    "\n",
+    "scores = cross_val_score(xgb_model, X_train, y_train, cv=5, scoring='r2')\n",
+    "print(f\"Cross-validated R² scores: {scores}\")\n",
+    "print(f\"Mean R²: {np.mean(scores):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "26ed132d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² (train): 0.9998\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dự đoán trên tập train\n",
+    "train_predictions = xgb_model.predict(X_train)\n",
+    "\n",
+    "# Tính R² train\n",
+    "r2_train = r2_score(y_train, train_predictions)\n",
+    "\n",
+    "print(f\"R² (train): {r2_train:.4f}\")"
    ]
   }
  ],
