--- a/Energy_consumption.ipynb
+++ b/Energy_consumption.ipynb
@@ -1283,7 +1283,7 @@
    "metadata": {},
    "source": [
     "### Biểu đố tương quan giữa các cột\n",
-    "Giờ có tương quan dương mạnh nhất với `PJME_MW`. Có đa cộng tuyến cao giữa Month, Quarter và Day_of_Year"
+    "Hour có tương quan dương mạnh nhất với `PJME_MW`. Có đa cộng tuyến cao giữa Month, Quarter và Day_of_Year"
    ]
   },
   {
